--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: # rebuild any PRs and main branch changes
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
       - 'releases/*'
 
 jobs:
