--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "author": "tomsun28",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@octokit/webhooks": "7.15.1",
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/webhooks": "^13.3.0",
     "@tomsun28/google-translate-api": "1.1.2",
     "franc-min": "5.0.0"
   },
