--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "setup",
     "translate",
     "issues",
-    "localization"
+    "localization",
+    "openai"
   ],
   "author": "tomsun28",
   "license": "MIT",
@@ -31,22 +32,21 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@octokit/webhooks": "^13.3.0",
-    "@tomsun28/google-translate-api": "1.1.2",
-    "franc-min": "5.0.0"
+    "openai": "^4.80.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^29.5.14",
     "@types/node": "^14.10.0",
     "@typescript-eslint/parser": "^3.10.1",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^7.8.1",
     "eslint-plugin-github": "^4.1.1",
     "eslint-plugin-jest": "^23.20.0",
-    "jest": "^24.9.0",
+    "jest": "^29.7.0",
     "jest-circus": "^26.4.2",
     "js-yaml": "^3.14.0",
     "prettier": "2.1.1",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.0.2"
   },
   "overrides": {
